syntax = "proto3";

package header.pb;

import "tendermint/types/types.proto";
import "tendermint/types/validator.proto";
import "celestia/core/v1/da/data_availability_header.proto";

message ExtendedHeader {
  tendermint.types.Header header = 1;
  tendermint.types.Commit commit = 2;
  tendermint.types.ValidatorSet validator_set = 3;
  celestia.core.v1.da.DataAvailabilityHeader dah = 4;
}

// Generated with:
// protoc -I=. -I=$(go list -f {{.Dir}} -m github.com/tendermint/tendermint)/proto/ -I=$(go list -f {{.Dir}} -m github.com/gogo/protobuf)  --gogofaster_out . ./extended_header.proto
